--- a/Wordpress-auto-config/install_wordpress.yml
+++ b/Wordpress-auto-config/install_wordpress.yml
@@ -3,5 +3,6 @@
   become: yes
   vars:
     wordpress_path: /var/www/wordpress
+    project_name: MyProject
   tasks:
   - include_tasks: tasks/os-dependencies.yml
