Update help, add minor changes to files

--- a/reverse-proxy/infra.yml
+++ b/reverse-proxy/infra.yml
@@ -10,5 +10,6 @@
         state: started
 - hosts: proxy_nodes
   tasks:
-    - debug:
-        msg: "dziala"
+    - yum:
+       name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+       state: present
