Add automatic certificate install

--- a/final/template/temp_nginx.conf
+++ b/final/template/temp_nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name 3.121.22.77;
+    server_name 3.121.216.232 aapkaa.tk;
 
     location / {
-        proxy_pass http://172.31.18.226:8080/cars;
+        proxy_pass http://172.31.29.40:8080/cars;
     }
 }
