--- a/final/auto-config.yml
+++ b/final/auto-config.yml
@@ -2,7 +2,7 @@
 - hosts: application_nodes
   become: yes
   vars:
-    jar_location: /home/bartek/IdeaProjects/rental-app/target/rental-app-0.0.1-SNAPSHOT.jar
+    jar_location: /home/bartek/IdeaProjects/car-rental-app/target/rental-app-0.0.1-SNAPSHOT.jar
     app_location: /opt/rentalapp/rentalapp.jar
     app_user: rentalapp
   tasks:
@@ -33,18 +33,25 @@
 
 - hosts: proxy_nodes
   become: yes
+  vars:
+    email: test@gmail.com
+    domain: aapkaa.tk
   tasks:
-    - yum:
-        name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-        state: present
-    - name: Install nginx web server
-      yum:
-        name: nginx
-        state: present
-    - name: Add nginx.conf file
-      template:
-        src: template/temp_nginx.conf
-        dest: /etc/nginx/conf.d/my_nginx.conf
-    - service:
-        name: nginx
-        state: restarted
+  - yum:
+      name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+      state: present
+  - name: Install nginx web server
+    yum:
+      name: nginx
+      state: present
+  - name: Add nginx.conf file
+    template:
+      src: template/temp_nginx.conf
+      dest: /etc/nginx/conf.d/my_nginx.conf
+  - service:
+      name: nginx
+      state: restarted
+  - yum:
+      name: python2-certbot-nginx
+      state: present
+  - shell: "sudo certbot -i nginx -d '{{domain}}' --nginx -m '{{email}}' --agree-tos --redirect"
