--- a/final/hosts.ini
+++ b/final/hosts.ini
@@ -3,3 +3,9 @@
 
 [proxy_nodes]
 3.121.216.232 ansible_user=ec2-user
+
+[metrics_storage]
+18.195.50.160 ansible_user=ec2-user
+
+[app_database]
+18.195.50.160 ansible_user=ec2-user
