Refactoring, code polishing

--- a/final/template/temp_nginx.conf
+++ b/final/template/temp_nginx.conf
@@ -1,8 +1,13 @@
+upstream my_application {
+    server 172.31.28.250:8080;
+    server 172.31.21.125:8080;
+}
+
 server {
     listen 80;
-    server_name 3.121.216.232 aapkaa.tk;
+    server_name 18.197.46.141 aapkaa.tk;
 
     location / {
-        proxy_pass http://172.31.29.40:8080/cars;
+        proxy_pass http://my_application;
     }
 }
