--- a/final/hosts.ini
+++ b/final/hosts.ini
@@ -1,11 +1,11 @@
 [application_nodes]
-35.159.23.118 ansible_user=ec2-user
+18.185.41.245 ansible_user=ec2-user
 
 [proxy_nodes]
-3.121.216.232 ansible_user=ec2-user
+18.197.46.141 ansible_user=ec2-user
 
 [metrics_storage]
 18.195.50.160 ansible_user=ec2-user
 
-[app_database]
-18.195.50.160 ansible_user=ec2-user
+[database_nodes]
+54.93.38.173 ansible_user=ec2-user
